samples/_failures_safe/1761294032_c93448_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3dd02b0.c: In function ‘main’:
./samples/SAFE/__tmp_e3dd02b0.c:156:46: error: expected ‘)’ at end of input
  156 |                 if (add_matrices(&mat1, &mat2
      |                                 ~            ^
      |                                              )
./samples/SAFE/__tmp_e3dd02b0.c:156:21: error: too few arguments to function ‘add_matrices’
  156 |                 if (add_matrices(&mat1, &mat2
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_e3dd02b0.c:86:5: note: declared here
   86 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_e3dd02b0.c:156:17: error: expected declaration or statement at end of input
  156 |                 if (add_matrices(&mat1, &mat2
      |                 ^~
./samples/SAFE/__tmp_e3dd02b0.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e3dd02b0.c:156:17: error: expected declaration or statement at end of input
